Alpha 3 (candidate):
- [Enhancement] Improved search tags and descriptions in parts.
- [Change] Increase hooks break strength with respect to Unity 5 physics change.